fix: alignment of roadmap phases

--- a/style.css
+++ b/style.css
@@ -158,7 +158,7 @@ section#Services {
 }
 .roadmap .roadmap-top .phase.phase2 {
     position: absolute;
-    top: 120%;
+    top: 110%;
     left: 15%;
 }
 .roadmap .roadmap-top .phase.phase3 {
@@ -166,7 +166,7 @@ section#Services {
 }
 .roadmap .roadmap-top .phase.phase4 {
     position: absolute;
-    top: 120%;
+    top: 110%;
     left: 60%;
 }
 .roadmap .roadmap-top .phase.phase5 {
